# NLPBenchmarking

./: .gitignore  Makefile  README.md  local_llm_ragas_llama.ipynb  mediatek_mt6595.txt  pyproject.toml  ragas_entry_point.py  ragas_framework_gpt3.5.ipynb  requirements.txt
nlpbench/: models_for_eval.py  utils.py
nlpbench/data/: generation.py
nlpbench/datastructures/: assumptions.py
nlpbench/rags/: __init__.py  generation.py
resources/: Ragas.md
